--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">TV Program</a>
+            <a class="nav-link disabled" href="#">TV Program</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Films</a>
+            <a class="nav-link disabled" href="#">Films</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Original</a>
+            <a class="nav-link disabled" href="#">Original</a>
           </li>
         </ul>
         <ul class="navbar-nav">
